--- a/templates/team/show.html.twig
+++ b/templates/team/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ team.teamName }} {{ team.season }} - FC Rosheim{% endblock %}
+{% block title %}FC Roshem - {{ team.teamName }} {{ team.season }}{% endblock %}
 {% block meta_description %}Liste des joueurs de l'équipe {{ team.teamName }} {{ team.season }} du FC Rosheim{% endblock %}
 
 {% block content %}
