--- a/templates/news/show.html.twig
+++ b/templates/news/show.html.twig
@@ -19,6 +19,7 @@
 
 	<img>{{ news.picture }}</img>
 
+
 	<p class="justify-content-end flex font-italic date-time">Rédigé le
 		{{ news.createdAt ? news.createdAt|date('Y-m-d') }}
 		à
@@ -27,15 +28,16 @@
 		{{ news.createdAt ? news.createdAt|date('Y-m-d') }}
 		à
 		{{ news.createdAt ? news.createdAt|date('H:i:s') : '' }}</p> #}
+    <div class="redline-player"></div>
 
 </div>
 
 {# buttons #}
 <div class="btn-container d-flex justify-content-between">
-	<a class="crud-btn" href="{{ path('news_index') }}">back to list</a>
+	<a class="crud-btn" href="{{ path('news_index') }}">Retour à la liste</a>
 
 	{% if is_granted('ROLE_ADMIN') %}
-		<a class="crud-btn" href="{{ path('news_edit', {'id': news.id}) }}">edit</a>
+		<a class="crud-btn" href="{{ path('news_edit', {'id': news.id}) }}">Modifier</a>
 	{{ include('news/_delete_form.html.twig') }}
 	{% endif %}
 </div>
