--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,10 +15,10 @@
     <body class="">
 
         {{ include ("include/_header.html.twig") }}
-        <div class="col-md-12">
         <div class="col-md-1">
         {{ include ("include/_externalLinks.html.twig") }}
         </div>
+        <div class="col-md-11">
         {# <div class="row">
 		<div class="col-2"></div>
 		<div class="col-8"> #}
@@ -27,6 +27,8 @@
         {# </div>
 		<div class="col-2"></div>
         </div> #}
+        </div>
+
     </body>
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
