--- a/templates/event/edit.html.twig
+++ b/templates/event/edit.html.twig
@@ -3,11 +3,21 @@
 {% block title %}Edit Event{% endblock %}
 
 {% block content %}
-    <h1>Edit Event</h1>
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
+
+            <h1>Mettre à jour un événement</h1>
+            <div class="card container-fluid d-flex flex mb-3">
 
     {{ include('event/_form.html.twig', {'button_label': 'Update'}) }}
-     
-    <a href="{{ path('event_index') }}">back to list</a>
-
     {{ include('event/_delete_form.html.twig') }}
+            </div>
+
+        <a href="{{ path('news_index') }}">back to list</a>
+
+        </div>
+    </div>
+    <div class="col-2"></div>
+
 {% endblock %}
