--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -14,38 +14,38 @@
 
 {% block content %}
 
-<div id="calendar-holder" class="calendar-padding"></div>
+<div class="row">
+	<div class="col-2"></div>
 
-    <h1>Event index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Description</th>
-                <th>Type</th>
-                <th>StartDate</th>
-                <th>EndDate</th>
-                <th>Location</th>
-                <th>Slug</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
+	<div class="col-8">
+	<h1>Tous les événements</h1>
+	<div class="card container-fluid d-flex flex mb-3">
+    	<table class="table table-striped table-dark">
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>Titre</th>
+					<th>Description</th>
+					<th>Type</th>
+					<th>Date de début</th>
+					<th>Date de fin</th>
+					<th>Location</th>
+					<th>actions</th>
+				</tr>
+			</thead>
+			<tbody>
         {% for event in events %}
             <tr>
                 <td>{{ event.id }}</td>
                 <td>{{ event.title }}</td>
                 <td>{{ event.description }}</td>
                 <td>{{ event.type }}</td>
-                <td>{{ event.startDate ? event.startDate|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ event.endDate ? event.endDate|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ event.startDate ? event.startDate|date('d/m/Y H:i') : '' }}</td>
+                <td>{{ event.endDate ? event.endDate|date('d/m/Y H:i') : '' }}</td>
                 <td>{{ event.location }}</td>
-                <td>{{ event.slug }}</td>
                 <td>
-                    <a href="{{ path('event_show', {'id': event.id}) }}">show</a>
-                    <a href="{{ path('event_edit', {'id': event.id}) }}">edit</a>
+                    <a href="{{ path('event_show', {'id': event.id}) }}">Voir</a>
+                    <a href="{{ path('event_edit', {'id': event.id}) }}">Éditer</a>
                 </td>
             </tr>
         {% else %}
@@ -53,10 +53,18 @@
                 <td colspan="9">no records found</td>
             </tr>
         {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('event_new') }}">Create new</a>
+        	</tbody>
+    	</table>
+		<a href="{{ path('event_new') }}">Créer un nouvel événement</a>
+	</div>
+	<a href="{{ path('news_index') }}">Retour à la liste</a>
+	<h1 style="margin-top: 3rem;">Vue calendrier</h1>
+	<div class="card container-fluid d-flex flex mb-3">
+		<div id="calendar-holder" class="calendar-padding"></div>
+	</div>
+	</div>
+	<div class="col-2"></div>
+</div>
 {% endblock %}
 
 {% block javascripts %}
