--- a/templates/event/new.html.twig
+++ b/templates/event/new.html.twig
@@ -13,15 +13,20 @@
 {% endblock %}
 
 {% block content %}
-	<h1>Create new Event</h1>
+<div class="row">
+	<div class="col-2"></div>
+	<div class="col-8">
 
+		<h1>Créer une nouvelle News</h1>
+		<div class="card container-fluid d-flex flex mb-3">
 	{{ include('event/_form.html.twig') }}
+		</div>
 
-	<a href="{{ path('event_new') }}">Create new event</a>
+		<a href="{{ path('news_index') }}">back to list</a>
 
-	<div id="calendar-holder" class="calendar-padding"></div>
-
-	<a href="{{ path('event_index') }}">back to list</a>
+	</div>
+</div>
+	<div class="col-2"></div>
 {% endblock %}
 
 
