--- a/templates/news/edit.html.twig
+++ b/templates/news/edit.html.twig
@@ -7,7 +7,7 @@
         <div class="col-2"></div>
         <div class="col-8">
 
-            <h1>Créer une nouvelle News</h1>
+            <h1>Créer un nouvel événement</h1>
             <div class="card container-fluid d-flex flex mb-3">
                 {{ include('news/_form.html.twig') }}
                 {{ include('news/_delete_form.html.twig') }}
