--- a/templates/player/edit.html.twig
+++ b/templates/player/edit.html.twig
@@ -1,13 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Player{% endblock %}
+{% block title %}Edition {{player.firstName}} {{player.lastName}}  - FC Rosheim{% endblock %}
 
 {% block content %}
-    <h1>Edit Player</h1>
-
-    {{ include('player/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('player_index') }}">back to list</a>
-
-    {{ include('player/_delete_form.html.twig') }}
+    <div class="container-fluid">
+        <div class="row justify-content-md-center full-height flex align-items-center">
+            <div class="col-md-4 justify-content-md-center card">
+        <a href="{{ path('team_index') }}">Revenir en arrière</a>
+                <h1>Modifier {{player.firstName}} {{player.lastName}} </h1>
+                <span class="redline"></span>
+                    {{ include('player/_form.html.twig', {'button_label': 'Mettre à jour le joueur'}) }}
+                    <span class="redline"></span>
+                    {{ include('player/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
