--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -22,7 +22,7 @@
 
 			<div id="calendar-holder" class="calendar-padding"></div>
 
-			<h1 class="mb-4">Liste des évènements</h1>
+			<h1 class="mb-4">Liste des événements</h1>
 			{% if events is not null %}
 			{% for event in events %}
 
