--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,10 +15,10 @@
     <body class="w-100">
 
         {{ include ("include/_header.html.twig") }}
-        <div class="col-md-1">
+        <div class="col-1">
         {{ include ("include/_externalLinks.html.twig") }}
         </div>
-        <div class="col-md-11">
+        <div class="col-xxxl-11">
         {# <div class="row">
 		<div class="col-2"></div>
 		<div class="col-8">  #}
